# rosie_path_navigator

./: CMakeLists.txt  README.md  package.xml
launch/: rosie_path_navigator.launch
src/: path_navigator_node.cpp
srv/: PathNavigationService.srv
